--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -12,7 +12,7 @@
                 Back to Project Dashboard
             </a>
             <h2 class="ui header">
-                Service Order Details  {{projects.questions}} {{project_id}} {{user.first_name}}
+                Service Order Details 
                 <div class="sub header">Please indicate the following details and proceed to make payment</div>
             </h2>
       <div class="jumbotron">
