--- a/app/templates/project/project_dashboard.html
+++ b/app/templates/project/project_dashboard.html
@@ -64,7 +64,7 @@
                                    href="{# url_for('project.delete_project', project_id=u.id) #}" onclick="return confirmDeleteProject('{{ project.id }}');" data-content="{{ project.id }}">Delete</a>--->						
                             </td>
                             <td>
-                                <a class="ui blue left floated button" href="{{ url_for('project.project_details', org_id=org.id, project_id=u.id, name=u.name) }}">Enter</a>
+                                <a class="ui blue left floated button" href="{{ url_for('project.project_details', org_id=org.id, project_id=u.id, name=u.name) }}">Add</a>
                                 <!---<a class="ui red left floated button" style="margin-top: 1px"
                                    href="{# url_for('project.delete_project', project_id=u.id) #}" onclick="return confirmDeleteProject('{{ project.id }}');" data-content="{{ project.id }}">Delete</a>--->						
                             </td>
@@ -102,5 +102,38 @@
             return false;
         }
     </script>
+      <script src="https://js.stripe.com/v3/"></script>
+      {#
+      <script type="text/javascript">
+        const checkout_public_key = '{{checkout_public_key}}';
+        const checkout_session_id = '{{checkout_session_id}}';
+      </script>
+      #}
+	  <script>
+		$('select.dropdown')
+			.dropdown()
+		;
+	  </script>
+	  <script>
+			const button = document.querySelector('#buy_now_btn');
 
+			button.addEventListener('click', event => {
+				fetch('/stripe_pay')
+				.then((result) => { return result.json(); })
+				.then((data) => {
+					var stripe = Stripe(data.checkout_public_key);
+					stripe.redirectToCheckout({
+						// Make the id field from the Checkout Session creation API response
+						// available to this file, so you can provide it as parameter here
+						// instead of the {{CHECKOUT_SESSION_ID}} placeholder.
+						sessionId: data.checkout_session_id
+					}).then(function (result) {
+						// If `redirectToCheckout` fails due to a browser or network
+						// error, display the localized error message to your customer
+						// using `result.error.message`.
+					});
+				})
+			});
+	  </script>
+      <!---<script src="{{ url_for('static', filename='script-ajax.js') }}"></script>--->
 {% endblock %}
