--- a/app/templates/project/project_details.html
+++ b/app/templates/project/project_details.html
@@ -41,7 +41,7 @@
 				<a class="ui teal right floated button" href="{{ url_for('question.new_screener_question', project_id=project_id, org_id=org.id) }}">Create Screener Question</a>
 				{% endif %}
 		       {% if count_questions >= 10 %}
-				<a class="ui teal right floated button" href="{{ url_for('main.index', project_id=project_id, org_id=org.id) }}">Submit Questions</a>
+				        <a href="#" id="buy_now_btn" class="ui teal right floated button">Pay & Submit Questions</a>
 			   {% else %}
 				<a class="ui teal right floated button" href="{{ url_for('question.new_scale_question', project_id=project_id, org_id=org.id) }}">Create Scale Question</a>
 				
@@ -117,6 +117,39 @@
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         </form>
     </div>
+      <script src="https://js.stripe.com/v3/"></script>
+      {#
+      <script type="text/javascript">
+        const checkout_public_key = '{{checkout_public_key}}';
+        const checkout_session_id = '{{checkout_session_id}}';
+      </script>
+      #}
+	  <script>
+		$('select.dropdown')
+			.dropdown()
+		;
+	  </script>
+	  <script>
+			const button = document.querySelector('#buy_now_btn');
+
+			button.addEventListener('click', event => {
+				fetch('/stripe_pay')
+				.then((result) => { return result.json(); })
+				.then((data) => {
+					var stripe = Stripe(data.checkout_public_key);
+					stripe.redirectToCheckout({
+						// Make the id field from the Checkout Session creation API response
+						// available to this file, so you can provide it as parameter here
+						// instead of the {{CHECKOUT_SESSION_ID}} placeholder.
+						sessionId: data.checkout_session_id
+					}).then(function (result) {
+						// If `redirectToCheckout` fails due to a browser or network
+						// error, display the localized error message to your customer
+						// using `result.error.message`.
+					});
+				})
+			});
+	  </script>
 {% endblock %}
 {% block scripts %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
@@ -141,5 +174,38 @@
             return false;
         }
     </script>
+      <script src="https://js.stripe.com/v3/"></script>
+      {#
+      <script type="text/javascript">
+        const checkout_public_key = '{{checkout_public_key}}';
+        const checkout_session_id = '{{checkout_session_id}}';
+      </script>
+      #}
+	  <script>
+		$('select.dropdown')
+			.dropdown()
+		;
+	  </script>
+	  <script>
+			const button = document.querySelector('#buy_now_btn');
 
+			button.addEventListener('click', event => {
+				fetch('/stripe_pay')
+				.then((result) => { return result.json(); })
+				.then((data) => {
+					var stripe = Stripe(data.checkout_public_key);
+					stripe.redirectToCheckout({
+						// Make the id field from the Checkout Session creation API response
+						// available to this file, so you can provide it as parameter here
+						// instead of the {{CHECKOUT_SESSION_ID}} placeholder.
+						sessionId: data.checkout_session_id
+					}).then(function (result) {
+						// If `redirectToCheckout` fails due to a browser or network
+						// error, display the localized error message to your customer
+						// using `result.error.message`.
+					});
+				})
+			});
+	  </script>
+      <!---<script src="{{ url_for('static', filename='script-ajax.js') }}"></script>--->
 {% endblock %}
