--- a/app/templates/project/project_dashboard.html
+++ b/app/templates/project/project_dashboard.html
@@ -35,6 +35,10 @@
             </h2>
             <div class="ui header" style="width: 100%; height: 50px">
                 <a class="ui teal left floated button" href="{{ url_for('project.new_project', org_id=org.id) }}">Create New Project</a>
+		       {% if count_questions >= 10 %}
+				        <a href="#" id="buy_now_btn" class="ui teal right floated button">Pay & Submit Questions</a>
+			   {% else %}
+			   {% endif %}
 			</div>
             {# Use overflow-x: scroll so that mobile views don't freak out
              # when the table is too wide #}
@@ -48,7 +52,7 @@
                         <th>Service Category</th>
                         <th>Service Currency</th>
                         <th>Edit Project Details</th>
-                        <th>Research Details</th>
+                        <th>Add Research Details</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -59,7 +63,7 @@
                             <td>{{ u.service_type }}</td>
                             <td>{{ u.currency }}</td>
                             <td>
-                                <a class="ui blue left floated button" href="{{ url_for('project.edit_project', org_id=org.id, project_id=u.id, name=u.name) }}">Edit Details</a>
+                                <a class="ui blue left floated button" href="{{ url_for('project.edit_project', org_id=org.id, project_id=u.id, name=u.name) }}">Edit </a>
                                 <!---<a class="ui red left floated button" style="margin-top: 1px"
                                    href="{# url_for('project.delete_project', project_id=u.id) #}" onclick="return confirmDeleteProject('{{ project.id }}');" data-content="{{ project.id }}">Delete</a>--->						
                             </td>
@@ -78,30 +82,6 @@
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         </form>
     </div>
-{% endblock %}
-{% block scripts %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
-    <script>
-        function confirmDeleteProject(project_id){
-            swal({
-                title: "Are you sure?",
-                text: "Once deleted, you will not be able to recover this project",
-                icon: "warning",
-                buttons: true,
-                dangerMode: true,
-            })
-                .then((willDelete) => {
-                    if (willDelete) {
-                        let form = $("#delete-project-form");
-                        form.attr('action', "{{ url_for('project.delete_project', project_id=0) }}".replace('0',project_id));
-                        form.submit();
-                    } else {
-                        return false;
-                    }
-                });
-            return false;
-        }
-    </script>
       <script src="https://js.stripe.com/v3/"></script>
       {#
       <script type="text/javascript">
@@ -136,4 +116,29 @@
 			});
 	  </script>
       <!---<script src="{{ url_for('static', filename='script-ajax.js') }}"></script>--->
+{% endblock %}
+{% block scripts %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
+    <script>
+        function confirmDeleteProject(project_id){
+            swal({
+                title: "Are you sure?",
+                text: "Once deleted, you will not be able to recover this project",
+                icon: "warning",
+                buttons: true,
+                dangerMode: true,
+            })
+                .then((willDelete) => {
+                    if (willDelete) {
+                        let form = $("#delete-project-form");
+                        form.attr('action', "{{ url_for('project.delete_project', project_id=0) }}".replace('0',project_id));
+                        form.submit();
+                    } else {
+                        return false;
+                    }
+                });
+            return false;
+        }
+    </script>
+
 {% endblock %}
