--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -33,6 +33,14 @@
                                     description='Create a new user account', icon='add user icon') }}
                 {{ dashboard_option('Invite New User', 'admin.invite_user',
                                     description='Invites a new user to create their own account', icon='add user icon') }}
+                {{ dashboard_option('All Questions', 'admin.questions',
+                                    description='View and manage users\' Questions', icon='edit icon') }}
+                {{ dashboard_option('All Scaled Questions', 'admin.scale_questions',
+                                    description='View and manage users\' Scaled Questions', icon='edit icon') }}
+                {{ dashboard_option('All Multiple Choice Questions', 'admin.multiple_choice_questions',
+                                    description='View and manage users\' Questions', icon='edit icon') }}
+                {{ dashboard_option('All Screener Questions', 'admin.screener_questions',
+                                    description='View and manage users\' Screener Questions', icon='edit icon') }}
                 {{ dashboard_option('Blog Management', 'admin.blog_index',
                                     description='View and manage Blog Area', icon='blogger icon') }}
             </div>
