--- a/app/templates/main/cancel.html
+++ b/app/templates/main/cancel.html
@@ -5,10 +5,10 @@
 <div class="ui text container">
  <div class="ui placeholder segment">
   <div class="ui icon header">
-   <h1>Thank You</h1>
+   <h1>Cancelled</h1>
     <i class="times circle outline icon"></i>
-    <h1>Order Received</h1>
-	<h3>We have began processing your research project and we will be in contact as soon as we are ready.</h3>
+    <h1>Order Cancelled</h1>
+	<h3>We noticed your order has been cancelled, is there anything we could do to help?</h3>
   </div>
 
 </div>
