--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -35,6 +35,8 @@
                                     description='Invites a new user to create their own account', icon='add user icon') }}
                 {{ dashboard_option('All Questions', 'admin.questions',
                                     description='View and manage users\' Questions', icon='edit icon') }}
+                {{ dashboard_option('All Projects', 'admin.projects',
+                                    description='View and manage users\' Projects', icon='edit icon') }}
                 {{ dashboard_option('All Scaled Questions', 'admin.scale_questions',
                                     description='View and manage users\' Scaled Questions', icon='edit icon') }}
                 {{ dashboard_option('All Multiple Choice Questions', 'admin.multiple_choice_questions',
