--- a/app/templates/question/create_scale_question.html
+++ b/app/templates/question/create_scale_question.html
@@ -11,7 +11,7 @@
         <div class="twelve wide column">
                 <a class="ui basic compact button" href="{{ url_for('project.index') }}">
                 <i class="caret left icon"></i>
-                Back to Questions' List
+                Back to Project' List
             </a>
 			<div class="ui segment">
 			  <p>A scaled question is a question that asks you to measure your opinion on a product, service, etc. by choosing a number from a lowest possible number to a highest possible number.</p>
