--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -45,6 +45,10 @@
                                     description='View and manage users\' Screener Questions', icon='edit icon') }}
                 {{ dashboard_option('Blog Management', 'admin.blog_index',
                                     description='View and manage Blog Area', icon='blogger icon') }}
+                {{ dashboard_option('Manage Tracking Script', 'admin.added_trackingscript',
+                                    description='Manage favicon', icon='file code outline icon') }}	
+                {{ dashboard_option('Miscellaneous Texts', 'admin.texts',
+                                    description='View and manage Miscellaneous Texts', icon='settings icon') }}
             </div>
         </div>
     </div>
