--- a/app/templates/macros/nav_macros.html
+++ b/app/templates/macros/nav_macros.html
@@ -21,29 +21,25 @@
 
 {% macro header_items(current_user) %}
     {% set endpoints = [
-      ('public.home', config.APP_NAME, 'home'),
-      ('main.about', 'About', 'info')
+      ('public.home', config.APP_NAME, 'home')
     ]%}
-    {% set signedin = [] %}
-    {% if current_user.is_authenticated %}
-    {% set signedin = [
-	  ('organisations.org_home', 'Organization Dashboard', 'building'),
-	  ('project.index', 'Project Dashboard', 'folder open'),
-	  ('question.index', 'Question Dashboard', 'tasks')
-    ]%}
-	{% else %}
-    {% endif %} 
-	
     {% set user = [] %}
     {% if current_user.is_authenticated and current_user.role.is_admin %}
-      {% set user = ([(current_user.role.index + '.index', current_user.role.name + ' Dashboard', 'user')]) %}
+            {% set user = ([(current_user.role.index + '.index', current_user.role.name + ' Dashboard', 'user')]) %}
+    {% elif current_user.is_authenticated %}
+      {% set user = ([
+		  ('organisations.org_home', 'Organization Dashboard', 'building'),
+		  ('project.index', 'Project Dashboard', 'folder open'),
+		  ('question.index', 'Question Dashboard', 'tasks')
+	  ]) %}
     {% endif %} 
-    {{ render_menu_items( endpoints +  user + signedin ) }}
+    {{ render_menu_items( endpoints +  user ) }}
 {% endmacro %}
 
 {# This renders the right hand side of the navigation bar. If the user is logged in, it links to 
    manage their account and logout (account routes). Otherwise, it links to register and login.
 #}
+
 {% macro account_items(current_user) %}
     {% if current_user.is_authenticated %}
       {% set endpoints = [
