--- a/app/templates/partials/_head.html
+++ b/app/templates/partials/_head.html
@@ -8,6 +8,30 @@
 {% assets 'vendor_js' %}<script type="text/javascript" src="{{ ASSET_URL }}"></script>{% endassets %}
 {% assets 'app_js' %}<script type="text/javascript" src="{{ ASSET_URL }}"></script>{% endassets %}
 
+		<script type="text/css">
+		.ui.inverted.menu {
+			border: 0 solid transparent;
+			background: #007bff;
+			-webkit-box-shadow: none;
+			box-shadow: none;
+		}
+
+		.ui.menu {
+			display: -webkit-box;
+			display: -ms-flexbox;
+			display: flex;
+			margin: 1rem 0;
+			font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+			background: #007bff;
+			font-weight: 400;
+			border: 1px solid rgba(34,36,38,.15);
+			-webkit-box-shadow: 0 1px 2px 0 rgb(34 36 38 / 15%);
+			box-shadow: 0 1px 2px 0 rgb(34 36 38 / 15%);
+			border-radius: .28571429rem;
+			min-height: 2.85714286em;
+		}
+		</script>
+
 {% if config.GOOGLE_ANALYTICS_ID %}
 <!-- Google Analytics -->
 <script type="text/javascript">
@@ -35,4 +59,5 @@
   analytics.page();
   }}();
 </script>
+
 {% endif %}
