--- a/app/templates/question/question_details.html
+++ b/app/templates/question/question_details.html
@@ -14,8 +14,8 @@
                 Back to Project Dashboard
             </a>
             <h2 class="ui header">
-                Edit
-                <div class="sub header">Edit question</div>
+                {{ project.name }}
+                <div class="sub header">Project's questions</div>
             </h2>
 
             {% set flashes = {
@@ -31,8 +31,8 @@
 
 			<div class="ui segment">
 				<div class="ui right floated horizontal list">
-				  <a class="item" href="{{ url_for('question.edit_screener_question', question_id=screener_question.id, question=screener_question.question) }}"><i class="edit outline icon"></i></a>
-				  <a class="item" href="{{ url_for('question.delete_screener_question', question_id=screener_question.id, question=screener_question.question) }}"><i class="trash alternate outline icon"></i></a> 
+				  <a class="item" href="{# url_for('question.edit_screener_question', question_id=screener_question.id, question=screener_question.question) #}"><i class="edit outline icon"></i></a>
+				  <a class="item" href="{# url_for('question.delete_screener_question', question_id=screener_question.id, question=screener_question.question) #}"><i class="trash alternate outline icon"></i></a> 
 				</div>
 			  <h3 class="ui left floated header">Screener Question : {{screener_question.question }}</h3>
 			  <div class="ui clearing divider"></div>
@@ -42,29 +42,32 @@
 			{% endif %}
 
 			{% for item in question %}
+				{% if item.scale_question %}
 			<div class="ui segment">
 				<div class="ui right floated horizontal list">
 				  <!---<a class="item" href="#"><i class="edit outline icon"></i></a>
 				  <a class="item" href="#"><i class="plus square outline icon"></i></a>---->
 				</div>
-			  <h3 class="ui left floated header">{{ item.title }}</h3>
+			  <h3 class="ui left floated header">{{ item.scale_question.title }}</h3>
 			  <div class="ui clearing divider"></div>
 			  <h5 class="ui header"></h5>
-			  <p>{{ item.description }}</p>
+			  <p>{{ item.scale_question.description }}</p>
 			</div>
-			
+			 		{% endif %}	
+				{% if item.multiple_choice_question %}
+			<div class="ui segment">
+				<div class="ui right floated horizontal list">
+				  <!---<a class="item" href="#"><i class="edit outline icon"></i></a>
+				  <a class="item" href="#"><i class="plus square outline icon"></i></a>---->
+				</div>
+			  <h3 class="ui left floated header">{{ item.multiple_choice_question.title }}</h3>
+			  <div class="ui clearing divider"></div>
+			  <h5 class="ui header"></h5>
+			  <p>{{ item.multiple_choice_question.description }}</p>
+			</div>
+			 		{% endif %}	
 			{% endfor %}			
 		
-            {{ f.form_message(flashes['error'], header='Something went wrong.', class='error') }}
-            {{ f.form_message(flashes['warning'], header='Check your email.', class='warning') }}
-            {{ f.form_message(flashes['info'], header='Information', class='info') }}
-            {{ f.form_message(flashes['success'], header='Success!', class='success') }}
-
-            {% for field in screener_question_form | selectattr('type', 'equalto', 'SubmitField') %}
-                {{ f.render_form_field(field) }}
-            {% endfor %}
-
-            {{ f.end_form() }}
 
         </div>
     </div>
