--- a/app/templates/question/question_details.html
+++ b/app/templates/question/question_details.html
@@ -9,9 +9,9 @@
 {% block content %}
     <div class="ui stackable centered grid container">
         <div class="twelve wide column">
-                <a class="ui basic compact button" href="{{ url_for('project.index') }}">
+                <a class="ui basic compact button" href="{{ url_for('question.index') }}">
                 <i class="caret left icon"></i>
-                Back to Project Dashboard
+                Back to Question Dashboard
             </a>
             <h2 class="ui header">
                 {{ project.name }}
