--- a/app/templates/question/question_details.html
+++ b/app/templates/question/question_details.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html' %}
-{% import 'macros/form_macros.html' as f %}
-{% import 'macros/check_password.html' as check %}
+{# import 'macros/form_macros.html' as f #}
+
 
 
 {% block scripts %}
@@ -18,21 +18,12 @@
                 <div class="sub header">Project's questions</div>
             </h2>
 
-            {% set flashes = {
-                'error':   get_flashed_messages(category_filter=['form-error']),
-                'warning': get_flashed_messages(category_filter=['form-check-email']),
-                'info':    get_flashed_messages(category_filter=['form-info']),
-                'success': get_flashed_messages(category_filter=['form-success'])
-            } %}
-
-            {{ f.begin_form(screener_question_form, flashes) }}
-
 			{% if screener_question %}
 
 			<div class="ui segment">
 				<div class="ui right floated horizontal list">
 				  <a class="item" href="{# url_for('question.edit_screener_question', question_id=screener_question.id, question=screener_question.question) #}"><i class="edit outline icon"></i></a>
-				  <a class="item" href="{# url_for('question.delete_screener_question', question_id=screener_question.id, question=screener_question.question) #}"><i class="trash alternate outline icon"></i></a> 
+				  <a class="item" href="{{ url_for('question.add_screener_answer', project_id=project.id, question_id=screener_question.id, question=screener_question.question) }}"><i class="eye icon"></i></a> 
 				</div>
 			  <h3 class="ui left floated header">Screener Question : {{screener_question.question }}</h3>
 			  <div class="ui clearing divider"></div>
