--- a/app/templates/question/question_dashboard.html
+++ b/app/templates/question/question_dashboard.html
@@ -38,7 +38,7 @@
                 </table>
             </div>
         </div>
-        <form method="POST" action="{{ url_for('question.delete_question', question_id=0) }}" id="delete-questin-form">
+        <form method="POST" action="{{ url_for('question.delete_question', question_id=0) }}" id="delete-question-form">
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         </form>
     </div>
