--- a/app/templates/question/question_details.html
+++ b/app/templates/question/question_details.html
@@ -23,7 +23,7 @@
 			<div class="ui segment">
 				<div class="ui right floated horizontal list">
 				  <a class="item" href="{# url_for('question.edit_screener_question', question_id=screener_question.id, question=screener_question.question) #}"><i class="edit outline icon"></i></a>
-				  <a class="item" href="{{ url_for('question.add_screener_answer', project_id=project.id, question_id=screener_question.id, question=screener_question.question) }}"><i class="eye icon"></i></a> 
+				  <a class="item" href="{{ url_for('answer.add_screener_answer', project_id=project.id, question_id=screener_question.id, question=screener_question.question) }}"><i class="eye icon"></i></a> 
 				</div>
 			  <h3 class="ui left floated header">Screener Question : {{screener_question.question }}</h3>
 			  <div class="ui clearing divider"></div>
